assign vlans to device interfaces based on common vlan_group association

--- a/nautobot/dcim/templates/dcim/device.html
+++ b/nautobot/dcim/templates/dcim/device.html
@@ -26,9 +26,7 @@
                                     <tr>
                                         <td>VLAN Group</td>
                                         <td>
-                                            {% if object.vlan_group%}
-                                                {{ object.vlan_group|hyperlinked_object }} /
-                                            {% endif %}
+                                            {{ object.vlan_group|hyperlinked_object }}
                                         </td>
                                     </tr>
                                     <tr>
